--- a/src/sass/components/menu.scss
+++ b/src/sass/components/menu.scss
@@ -1,6 +1,8 @@
 @import '../mixins/typography';
 
 .menu {
+    position: fixed;
+    z-index: 99999;
 
     &__shadow {
         background: $c-white;
